crates/plotnik-lib/tests/04-emit/predicates/regex_op_string_value.txt
Q = (identifier =~ "foo") @id
------------------ DIAGNOSTICS -------------------
error: predicate operand out of range at step 8
 --> query.ptk:1:1
  |
1 | Q = (identifier =~ "foo") @id
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
